Update app configs

--- a/apps/total_commander/wincmd.ini
+++ b/apps/total_commander/wincmd.ini
@@ -1,15 +1,15 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=1659
+firstmnu=1915
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=215
+test=86
 onlyonce=1
 TrayIcon=0
-UseRightButton=0
+UseRightButton=1
 Savepath=1
 Savepanels=1
 MarkDirectories=1
@@ -22,7 +22,7 @@ EverythingForSize=0
 CountSpace=1
 CountMarked=1
 1hourdif=0
-CopyComments=6
+CopyComments=14
 CommentPreferredFormat=4
 IconClickSelection=1
 Aligned extension=1
@@ -44,14 +44,14 @@ IconOverlays=1
 IconsSpecialFolders=3
 Showicons=2
 ShowEXEandLNKicons=2
-IconsInMenus=21
+IconsInMenus=17
 IconsOnNet=0
-MinIconWidth=-10
+MinIconWidth=-5
 MinLineHeight=-5
 ExplorerForCopy=0
 Win95Delete=0
 UseTrash=1
-WatchDirs=0
+WatchDirs=9
 InstallDir=c:\totalcmd
 lastmd5=2
 CrcSeparateFiles=0
@@ -66,7 +66,7 @@ Editor=notepad.exe
 Viewertype=1
 SyncFlags=0
 SyncButtons=63
-DirTabOptions=1019
+DirTabOptions=1017
 DirTabLimit=32
 ShowCentury=1
 SizeStyle=9
@@ -81,16 +81,19 @@ LogRotateLimit=0
 LogKeepCount=30
 LastSearchOptions=0
 ResolutionSpecific=0
+OldListIcons=0
+CopyDirTimeStamp=1
+QuickSearchAutoFilter=1
 [Buttonbar]
 Buttonbar=%APPDATA%\GHISLER\default.bar
 DefaultLib=wcmicon2
-Buttonheight=51
+Buttonheight=29
 Buttonheight96=29
 FlatIcons=1
 SmallIcons=1
-SmallIconSize=28
+SmallIconSize=16
 SmallIconSize96=16
-DefaultDpi=168
+DefaultDpi=96
 XPstyle=0
 Buttonheight168=51
 SmallIconSize168=28
@@ -110,41 +113,40 @@ SmallIconSize96=16
 IconDll_default.bar=TCNewLib1
 IconDll_vertical.bar=TCNewLib1
 [Tabstops]
-0=340
-1=342
-3=397
-4=289
-6=849
+0=420
+1=435
+3=510
+4=360
+6=1106
 5=100
 AdjustWidth=1
 [Layout]
-DriveBar1=1
+DriveBar1=0
 DriveBar2=1
 DriveBarFlat=1
 InterfaceFlat=1
-DriveCombo=0
+DriveCombo=1
 DirectoryTabs=1
 XPthemeBg=0
 CurDir=1
 TabHeader=1
 StatusBar=1
-CmdLine=1
-KeyButtons=1
+CmdLine=0
+KeyButtons=0
 HistoryHotlistButtons=1
 BreadCrumbBar=1
-ButtonBar=1
-ButtonBarVertical=0
+ButtonBarVertical=1
 [ViewModeSwitch]
 [Colors]
-InverseCursor=0
+InverseCursor=1
 ThemedCursor=0
-InverseSelection=1
-BackColor=12632256
-BackColor2=12105912
-ForeColor=4144959
-MarkColor=7039851
-CursorColor=65280
-CursorText=65280
+InverseSelection=0
+BackColor=15724527
+BackColor2=15724527
+ForeColor=2894892
+MarkColor=24575
+CursorColor=16736000
+CursorText=15000804
 ColorFilter1=>CompressedFiles
 ColorFilter1Color=16711680
 ColorFilter2=>EncryptedFiles
@@ -165,17 +167,40 @@ Filter1=*.mkv
 Filter1_open=""%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe" "%1""
 [AllResolutions]
 FontSize=9
-FontName=I?EiNA?U
+FontName=Consolas
 FontSizeWindow=10
 FontNameWindow=Consolas
 FontWeight=400
-FontWeightWindow=400
+FontWeightWindow=700
 FontNameDialog=Microsoft Sans Serif
-CmdSelX=636
-CmdSelY=330
+CmdSelX=696
+CmdSelY=322
 CmdSelDX=653
 CmdSelDY=371
 CmdSelMax=0
+Iconsize32=24
+IconsInMenus_96=0
+CustColumnX=495
+CustColumnY=321
+CustColumnDX=657
+CustColumnDY=400
+CustColumnMax=0
+Tabstops=420,435,510,360,1106,100
+ConnectX=662
+ConnectY=260
+ConnectDX=485
+ConnectDY=400
+ConnectMax=0
+SearchX=689
+SearchY=408
+SearchDX=580
+SearchDY=264
+SearchMax=0
+TreeDlgX=166
+TreeDlgY=168
+TreeDlgDX=435
+TreeDlgDY=448
+TreeDlgMax=0
 [Lister]
 textwidth=81
 binwidth=75
@@ -236,7 +261,7 @@ Headers1=path
 Contents1=[=tc.path]
 Options1=-1|1|96
 AutoLoad=1
-Titles=path..
+Titles=Show Full Path
 [user]
 [DirMenu]
 menu1=Home
@@ -283,3 +308,20 @@ RedirectSection=%APPDATA%\GHISLER\history.ini
 RedirectSection=%APPDATA%\GHISLER\history.ini
 [ContentPlugins64]
 RedirectSection=%APPDATA%\GHISLER\history.ini
+[HintsCustomField]
+[Shortcuts]
+S+OEM_US;:=cm_FocusCmdLine
+A+S=cm_FocusTrg
+AS+S=cm_MatchSrc
+CS+D=cm_DirectoryHistory
+A+LEFT=cm_SwitchToPreviousTab
+A+RIGHT=cm_SwitchToNextTab
+A+D=cm_OpenDirInNewTab
+AS+D=cm_OpenDirInNewTabOther
+A+A=cm_SrcCustomViewMenu
+AS+A=cm_SrcViewModeList
+LEFT=cm_GoToParent
+RIGHT=cm_GoToDir
+SPACE=cm_Reverse
+F2=cm_RenameSingleFile
+F1=cm_RereadSource
