Update total commander configuration

--- a/apps/total_commander/wincmd.ini
+++ b/apps/total_commander/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=1915
+firstmnu=1531
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=86
+test=239
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -35,7 +35,7 @@ OldStyleTree=0
 autotreechange=0
 DirBrackets=0
 ShowParentDirInRoot=1
-SortDirsByName=1
+SortDirsByName=0
 Tips=3
 FileTipWindows=1
 Win32TipWindows=1
@@ -84,6 +84,7 @@ ResolutionSpecific=0
 OldListIcons=0
 CopyDirTimeStamp=1
 QuickSearchAutoFilter=1
+pluginbasedir=%USERPROFILE%\.local\lib\total_commander\plugins
 [Buttonbar]
 Buttonbar=%APPDATA%\GHISLER\default.bar
 DefaultLib=wcmicon2
@@ -160,11 +161,10 @@ ColorFilter5Color=9539985
 ColorFilter6=>ArchiveFiles
 ColorFilter6Color=32896
 [SearchText]
-0=screen
-1=visibility
-[Associations]
-Filter1=*.mkv
-Filter1_open=""%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe" "%1""
+0=FUCK
+1=logwn
+2=screen
+3=visibility
 [AllResolutions]
 FontSize=9
 FontName=Consolas
@@ -308,6 +308,8 @@ RedirectSection=%APPDATA%\GHISLER\history.ini
 RedirectSection=%APPDATA%\GHISLER\history.ini
 [ContentPlugins64]
 RedirectSection=%APPDATA%\GHISLER\history.ini
+[PackerPlugins64]
+RedirectSection=%APPDATA%\GHISLER\history.ini
 [HintsCustomField]
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
@@ -322,6 +324,15 @@ A+A=cm_SrcCustomViewMenu
 AS+A=cm_SrcViewModeList
 LEFT=cm_GoToParent
 RIGHT=cm_GoToDir
-SPACE=cm_Reverse
+SPACE=cm_SrcQuickview
 F2=cm_RenameSingleFile
 F1=cm_RereadSource
+[FileSystemPlugins]
+RedirectSection=%APPDATA%\GHISLER\plugins.ini
+[ListerPlugins]
+RedirectSection=%APPDATA%\GHISLER\plugins.ini
+[ContentPlugins]
+RedirectSection=%APPDATA%\GHISLER\plugins.ini
+[PackerPlugins]
+RedirectSection=%APPDATA%\GHISLER\plugins.ini
+[Associations]
