Update app configs

--- a/apps/total_commander/wincmd.ini
+++ b/apps/total_commander/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=1531
+firstmnu=1339
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=239
+test=179
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -318,8 +318,8 @@ AS+S=cm_MatchSrc
 CS+D=cm_DirectoryHistory
 A+LEFT=cm_SwitchToPreviousTab
 A+RIGHT=cm_SwitchToNextTab
-A+D=cm_OpenDirInNewTab
-AS+D=cm_OpenDirInNewTabOther
+A+D=cm_OpenDirInNewTabOther
+AS+D=cm_OpenDirInNewTab
 A+A=cm_SrcCustomViewMenu
 AS+A=cm_SrcViewModeList
 LEFT=cm_GoToParent
