--- a/apps/vscode/userdata/User/settings.json
+++ b/apps/vscode/userdata/User/settings.json
@@ -1,6 +1,5 @@
 {
     "git.ignoreMissingGitWarning": true,
-    "workbench.statusBar.feedback.visible": false,
     "workbench.startupEditor": "none",
     "workbench.enableExperiments": false,
     "update.enableWindowsBackgroundUpdates": false,
@@ -8,7 +7,7 @@
     "workbench.editor.tabSizing": "shrink",
     "explorer.autoReveal": false,
     "window.zoomLevel": 0,
-    "workbench.colorTheme": "One Dark Pro Vivid",
+    "workbench.colorTheme": "Eva Dark",
     "workbench.iconTheme": "vscode-icons",
     "csharp.referencesCodeLens.enabled": false,
     "editor.renderControlCharacters": true,
@@ -27,7 +26,7 @@
         80,
         120
     ],
-    "editor.fontFamily": "Cascadia Code, Sarasa Term CL, Consolas, 'Courier New', monospace",
+    "editor.fontFamily": "Cascadia Code PL, Sarasa Term CL, Consolas, 'Courier New', monospace",
     "editor.cursorStyle": "block",
     "editor.showFoldingControls": "always",
     "files.insertFinalNewline": true,
@@ -49,9 +48,4 @@
     "telemetry.enableTelemetry": false,
     "editor.fontLigatures": true,
     "workbench.sideBar.location": "left",
-    "todo-tree.general.tags": [
-        "TODO",
-        "FIXME",
-        "RAISE"
-    ]
 }
