Update vscode config

--- a/apps/vscode/User/settings.json
+++ b/apps/vscode/User/settings.json
@@ -42,8 +42,8 @@
     "extensions.autoCheckUpdates": false,
     "extensions.ignoreRecommendations": true,
     "extensions.showRecommendationsOnlyOnDemand": true,
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.enableBell": true,
+    "terminal.integrated.cursorBlinking": false,
+    "terminal.integrated.enableBell": false,
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
     "editor.fontLigatures": true,
