Update app configs

--- a/apps/totalcmd/wincmd.ini
+++ b/apps/totalcmd/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=1339
+firstmnu=3000
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=179
+test=18
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -66,7 +66,7 @@ Editor=notepad.exe
 Viewertype=1
 SyncFlags=0
 SyncButtons=63
-DirTabOptions=1017
+DirTabOptions=1019
 DirTabLimit=32
 ShowCentury=1
 SizeStyle=9
@@ -201,6 +201,12 @@ TreeDlgY=168
 TreeDlgDX=435
 TreeDlgDY=448
 TreeDlgMax=0
+RenameX=622
+RenameY=324
+RenameDX=720
+RenameDY=480
+RenameMax=0
+RenameTabs=169,276,476,536,656
 [Lister]
 textwidth=81
 binwidth=75
