Totalcmd: Update config

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=3000
+firstmnu=2488
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=18
+test=3
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -85,6 +85,9 @@ OldListIcons=0
 CopyDirTimeStamp=1
 QuickSearchAutoFilter=1
 pluginbasedir=%USERPROFILE%\.local\lib\total_commander\plugins
+CrcForceUtf8=0
+CrcForwardSlashes=0
+SoundDelay=-10
 [Buttonbar]
 Buttonbar=%APPDATA%\GHISLER\default.bar
 DefaultLib=wcmicon2
@@ -175,8 +178,8 @@ FontWeightWindow=700
 FontNameDialog=Microsoft Sans Serif
 CmdSelX=696
 CmdSelY=322
-CmdSelDX=653
-CmdSelDY=371
+CmdSelDX=756
+CmdSelDY=395
 CmdSelMax=0
 Iconsize32=24
 IconsInMenus_96=0
@@ -319,13 +322,7 @@ RedirectSection=%APPDATA%\GHISLER\history.ini
 [HintsCustomField]
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
-A+S=cm_FocusTrg
-AS+S=cm_MatchSrc
 CS+D=cm_DirectoryHistory
-A+LEFT=cm_SwitchToPreviousTab
-A+RIGHT=cm_SwitchToNextTab
-A+D=cm_OpenDirInNewTabOther
-AS+D=cm_OpenDirInNewTab
 A+A=cm_SrcCustomViewMenu
 AS+A=cm_SrcViewModeList
 LEFT=cm_GoToParent
@@ -333,6 +330,18 @@ RIGHT=cm_GoToDir
 SPACE=cm_SrcQuickview
 F2=cm_RenameSingleFile
 F1=cm_RereadSource
+A+H=cm_SwitchToPreviousTab
+A+L=cm_SwitchToNextTab
+AS+T=cm_OpenDirInNewTabOther
+A+T=cm_OpenNewTab
+A+J=cm_FocusTrg
+A+Q=cm_CloseCurrentTab
+AS+Q=cm_CloseAllTabs
+A+LEFT=cm_FocusTrg
+A+RIGHT=cm_FocusTrg
+A+UP=cm_SwitchToPreviousTab
+A+DOWN=cm_SwitchToNextTab
+A+M=cm_Reverse
 [FileSystemPlugins]
 RedirectSection=%APPDATA%\GHISLER\plugins.ini
 [ListerPlugins]
@@ -342,3 +351,9 @@ RedirectSection=%APPDATA%\GHISLER\plugins.ini
 [PackerPlugins]
 RedirectSection=%APPDATA%\GHISLER\plugins.ini
 [Associations]
+[Confirmation]
+deleteDirs=1
+OverwriteFiles=1
+OverwriteReadonly=1
+OverwriteHidSys=1
+MouseActions=0
