Totalcmd: Update config

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -6,7 +6,7 @@ FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=3
+test=5
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -342,6 +342,8 @@ A+RIGHT=cm_FocusTrg
 A+UP=cm_SwitchToPreviousTab
 A+DOWN=cm_SwitchToNextTab
 A+M=cm_Reverse
+A+P=cm_CopyNetNamesToClip
+AS+P=cm_CopyNamesToClip
 [FileSystemPlugins]
 RedirectSection=%APPDATA%\GHISLER\plugins.ini
 [ListerPlugins]
