Tmux: Update config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,15 +31,36 @@ bind-key M-x kill-session -a
 bind-key z detach-client
 
 # Quality of life
-set-option -g select-layout tiled
-set-option -g mouse on
 set-option -g mode-keys vi
 set-option -g history-limit 10000
 set-option -g default-terminal "tmux-256color"
-set-option -wg allow-rename off
-set-option -wg automatic-rename off
-set-window-option -g xterm-keys on
+set-option -g allow-rename off
+set-option -g automatic-rename off
+set-option -g xterm-keys on
+# Mouse support
+set-option -g mouse on
+
+# Appearance
+# Status bar
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-keys vi
+set-option -g status-position bottom
+set-option -g status-justify left
+set-option -g status-style fg=black,bg=white
+set-option -g status-left " [#S::#{pane_title}] "
+set-option -g status-left-length 20
+set-option -g status-left-style default
+set-option -g status-right " %m/%d/%Y %H:%M"
+set-option -g status-right-length 20
+set-option -g status-right-style default
+#set-option -g window-status-format "#I:#W#F"
+#set-option -g window-status-current-format "#I:#W#F"
+set-option -g window-status-separator " "
+set-option -g window-status-style default
+set-option -g window-status-current-style fg=white,bg=black
+
 
 # Debug
-bind-key F5 source ~/.tmux.conf\; display "tmux config sourced"
-bind-key F6 neww -n "tmux-config" "\${EDITOR:-vim} ~/.tmux.conf"
+bind F5 source ~/.tmux.conf\; display "tmux config sourced"
+bind F6 neww -n "tmux-config" "\${EDITOR:-vim} ~/.tmux.conf"
