Totalcmd: Update keymaps

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -6,7 +6,7 @@ FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=5
+test=4
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -176,8 +176,8 @@ FontNameWindow=Consolas
 FontWeight=400
 FontWeightWindow=700
 FontNameDialog=Microsoft Sans Serif
-CmdSelX=696
-CmdSelY=322
+CmdSelX=719
+CmdSelY=298
 CmdSelDX=756
 CmdSelDY=395
 CmdSelMax=0
@@ -337,13 +337,16 @@ A+T=cm_OpenNewTab
 A+J=cm_FocusTrg
 A+Q=cm_CloseCurrentTab
 AS+Q=cm_CloseAllTabs
-A+LEFT=cm_FocusTrg
-A+RIGHT=cm_FocusTrg
-A+UP=cm_SwitchToPreviousTab
-A+DOWN=cm_SwitchToNextTab
+A+LEFT=cm_SwitchToPreviousTab
+A+RIGHT=cm_SwitchToNextTab
+A+UP=cm_FocusTrg
+A+DOWN=cm_FocusTrg
 A+M=cm_Reverse
 A+P=cm_CopyNetNamesToClip
 AS+P=cm_CopyNamesToClip
+A+K=cm_FocusTrg
+A+X=cm_UnpackFiles
+A+Z=cm_PackFiles
 [FileSystemPlugins]
 RedirectSection=%APPDATA%\GHISLER\plugins.ini
 [ListerPlugins]
