Tmux: Update keymaps

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,25 +9,25 @@ bind-key -r j select-pane -D
 bind-key -r k select-pane -U
 bind-key -r - resize-pane -L
 bind-key -r = resize-pane -R
-bind-key -r M-- resize-pane -D
-bind-key -r M-= resize-pane -U
+bind-key -r _ resize-pane -D
+bind-key -r + resize-pane -U
 bind-key -r w resize-pane -Z
-bind-key -r M-[ swap-pane -U
-bind-key -r M-] swap-pane -D
-bind-key \; split-window -h -c "#{pane_current_path}"
-bind-key M-\; split-window -v -c "#{pane_current_path}"
+bind-key -r { swap-pane -U
+bind-key -r } swap-pane -D
+bind-key \ split-window -h -c "#{pane_current_path}"
+bind-key | split-window -v -c "#{pane_current_path}"
 bind-key q kill-pane
 # Windows (tabs)
 bind-key m command-prompt -I "#W" "rename-window '%%'"
 bind-key t new-window
-bind-key M-t break-pane
+bind-key T break-pane
 bind-key b choose-tree
 bind-key -r Left select-window -p
 bind-key -r Right select-window -n
-bind-key M-q kill-window
+bind-key Q kill-window
 # Sessions
-bind-key M-m command-prompt -I "#S" "rename-session '%%'"
-bind-key M-x kill-session -a
+bind-key M command-prompt -I "#S" "rename-session '%%'"
+bind-key X kill-session -a
 bind-key z detach-client
 
 # Quality of life
