Totalcmd: Update keymaps

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=2488
+firstmnu=3704
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=4
+test=227
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -323,11 +323,11 @@ RedirectSection=%APPDATA%\GHISLER\history.ini
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
 CS+D=cm_DirectoryHistory
-A+A=cm_SrcCustomViewMenu
+A+A=cm_SrcQuickview
 AS+A=cm_SrcViewModeList
 LEFT=cm_GoToParent
 RIGHT=cm_GoToDir
-SPACE=cm_SrcQuickview
+SPACE=cm_Reverse
 F2=cm_RenameSingleFile
 F1=cm_RereadSource
 A+H=cm_SwitchToPreviousTab
@@ -341,7 +341,6 @@ A+LEFT=cm_SwitchToPreviousTab
 A+RIGHT=cm_SwitchToNextTab
 A+UP=cm_FocusTrg
 A+DOWN=cm_FocusTrg
-A+M=cm_Reverse
 A+P=cm_CopyNetNamesToClip
 AS+P=cm_CopyNamesToClip
 A+K=cm_FocusTrg
