Totalcmd: Update config structure

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -1,7 +1,7 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=3704
+firstmnu=3128
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
@@ -84,12 +84,13 @@ ResolutionSpecific=0
 OldListIcons=0
 CopyDirTimeStamp=1
 QuickSearchAutoFilter=1
-pluginbasedir=%USERPROFILE%\.local\lib\total_commander\plugins
+pluginbasedir=%APPDATA%\GHISLER\plugins
 CrcForceUtf8=0
 CrcForwardSlashes=0
 SoundDelay=-10
+DarkMode=0
 [Buttonbar]
-Buttonbar=%APPDATA%\GHISLER\default.bar
+Buttonbar=%APPDATA%\GHISLER\toolbars\default.bar
 DefaultLib=wcmicon2
 Buttonheight=29
 Buttonheight96=29
@@ -102,7 +103,7 @@ XPstyle=0
 Buttonheight168=51
 SmallIconSize168=28
 [ButtonbarVertical]
-Buttonbar=%APPDATA%\GHISLER\vertical.bar
+Buttonbar=%APPDATA%\GHISLER\toolbars\vertical.bar
 Buttonheight=29
 Buttonheight168=53
 FlatIcons=1
@@ -116,6 +117,7 @@ SmallIconSize96=16
 [ButtonbarCache]
 IconDll_default.bar=TCNewLib1
 IconDll_vertical.bar=TCNewLib1
+IconDll_toolbar_default.bar=TCNewLib1
 [Tabstops]
 0=420
 1=435
@@ -141,28 +143,6 @@ HistoryHotlistButtons=1
 BreadCrumbBar=1
 ButtonBarVertical=1
 [ViewModeSwitch]
-[Colors]
-InverseCursor=1
-ThemedCursor=0
-InverseSelection=0
-BackColor=15724527
-BackColor2=15724527
-ForeColor=2894892
-MarkColor=24575
-CursorColor=16736000
-CursorText=15000804
-ColorFilter1=>CompressedFiles
-ColorFilter1Color=16711680
-ColorFilter2=>EncryptedFiles
-ColorFilter2Color=4227072
-ColorFilter3=>ReadonlyFiles
-ColorFilter3Color=128
-ColorFilter4=>SystemFiles
-ColorFilter4Color=8421631
-ColorFilter5=>HiddenFiles
-ColorFilter5Color=9539985
-ColorFilter6=>ArchiveFiles
-ColorFilter6Color=32896
 [SearchText]
 0=FUCK
 1=logwn
@@ -196,7 +176,7 @@ ConnectDY=400
 ConnectMax=0
 SearchX=689
 SearchY=408
-SearchDX=580
+SearchDX=729
 SearchDY=264
 SearchMax=0
 TreeDlgX=166
@@ -234,7 +214,7 @@ InternalUnzip=1
 zipnt=0
 ZIP=pkzip.exe
 UnZIP=pkunzip.exe
-InternalZipRate=6
+InternalZipRate=9
 Zip83Name=0
 ZipSetDateToNewest=0
 nodelete=0
@@ -281,44 +261,6 @@ menu3=Downloads
 cmd3=cd %USERPROFILE%\Downloads\
 menu4=Documents
 cmd4=cd %USERPROFILE%\Documents\
-[left]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[right]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[RightHistory]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[LeftHistory]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[lefttabs]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[righttabs]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[Command line history]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[MkDirHistory]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[NewFileHistory]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[PluginDuplicates]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[RenameTemplates]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[RenameSearchReplace]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[RenameSearchFind]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[Selection]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[DirSelection]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[FileSystemPlugins64]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[ListerPlugins64]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[ContentPlugins64]
-RedirectSection=%APPDATA%\GHISLER\history.ini
-[PackerPlugins64]
-RedirectSection=%APPDATA%\GHISLER\history.ini
 [HintsCustomField]
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
@@ -346,14 +288,6 @@ AS+P=cm_CopyNamesToClip
 A+K=cm_FocusTrg
 A+X=cm_UnpackFiles
 A+Z=cm_PackFiles
-[FileSystemPlugins]
-RedirectSection=%APPDATA%\GHISLER\plugins.ini
-[ListerPlugins]
-RedirectSection=%APPDATA%\GHISLER\plugins.ini
-[ContentPlugins]
-RedirectSection=%APPDATA%\GHISLER\plugins.ini
-[PackerPlugins]
-RedirectSection=%APPDATA%\GHISLER\plugins.ini
 [Associations]
 [Confirmation]
 deleteDirs=1
@@ -361,3 +295,54 @@ OverwriteFiles=1
 OverwriteReadonly=1
 OverwriteHidSys=1
 MouseActions=0
+; Redirect private data in a separate file
+[left]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[right]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[RightHistory]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[LeftHistory]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[lefttabs]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[righttabs]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[Command line history]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[MkDirHistory]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[NewFileHistory]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[PluginDuplicates]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[RenameTemplates]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[RenameSearchReplace]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[RenameSearchFind]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[Selection]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[DirSelection]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[FileSystemPlugins64]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[ListerPlugins64]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[ContentPlugins64]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+[PackerPlugins64]
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
+; Redirect plugin list
+[FileSystemPlugins]
+RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
+[ListerPlugins]
+RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
+[ContentPlugins]
+RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
+[PackerPlugins]
+RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
+; Redirect color scheme for easy import/export
+[Colors]
+RedirectSection=%APPDATA%\GHISLER\themes\solarized.ini
