Totalcmd: Update color scheme

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=3128
+firstmnu=696
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=227
+test=155
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -343,6 +343,8 @@ RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
 RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
 [PackerPlugins]
 RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
-; Redirect color scheme for easy import/export
+; Redirect color scheme for easy import and export
 [Colors]
-RedirectSection=%APPDATA%\GHISLER\themes\solarized.ini
+RedirectSection=%APPDATA%\GHISLER\themes\mysolarized.ini
+[ColorsDark]
+RedirectSection=%APPDATA%\GHISLER\themes\mysolarized.ini
