Totalcmd: Update color schemes

--- a/totalcmd/themes/mycmder.ini
+++ b/totalcmd/themes/mycmder.ini
@@ -2,21 +2,37 @@
 InverseCursor=1
 ThemedCursor=0
 InverseSelection=0
-BackColor=15724527
-BackColor2=15724527
-ForeColor=2894892
-MarkColor=24575
+BackColor=15790320
+BackColor2=16448250
+ForeColor=0
+MarkColor=9049599
 CursorColor=16736000
 CursorText=15000804
 ColorFilter1=>CompressedFiles
-ColorFilter1Color=16711680
+ColorFilter1Color=13959168
 ColorFilter2=>EncryptedFiles
-ColorFilter2Color=4227072
+ColorFilter2Color=54528
 ColorFilter3=>ReadonlyFiles
-ColorFilter3Color=128
+ColorFilter3Color=8421589
 ColorFilter4=>SystemFiles
-ColorFilter4Color=8421631
+ColorFilter4Color=213
 ColorFilter5=>HiddenFiles
-ColorFilter5Color=9539985
+ColorFilter5Color=10263708
 ColorFilter6=>ArchiveFiles
-ColorFilter6Color=32896
+ColorFilter6Color=54741
+ColorFilter1ColorDark=13959168,13959168
+ColorFilter2ColorDark=54528,54528
+ColorFilter3ColorDark=8421589,8421589
+ColorFilter4ColorDark=213,213
+ColorFilter5ColorDark=14013909,10263708
+ColorFilter6ColorDark=54741,54741
+[ColorsDark]
+InverseCursor=1
+ThemedCursor=0
+InverseSelection=0
+BackColor=2105376
+BackColor2=3421236
+ForeColor=13816530
+MarkColor=31993
+CursorColor=13158400
+CursorText=3421236
