--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=696
+firstmnu=952
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=155
+test=166
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -345,6 +345,6 @@ RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
 RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
 ; Redirect color scheme for easy import and export
 [Colors]
-RedirectSection=%APPDATA%\GHISLER\themes\mysolarized.ini
+RedirectSection=%APPDATA%\GHISLER\themes\mycmder.ini
 [ColorsDark]
-RedirectSection=%APPDATA%\GHISLER\themes\mysolarized.ini
+RedirectSection=%APPDATA%\GHISLER\themes\mycmder.ini
