Totalcmd: Update keymaps

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=952
+firstmnu=440
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=166
+test=100
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -265,8 +265,6 @@ cmd4=cd %USERPROFILE%\Documents\
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
 CS+D=cm_DirectoryHistory
-A+A=cm_SrcQuickview
-AS+A=cm_SrcViewModeList
 LEFT=cm_GoToParent
 RIGHT=cm_GoToDir
 SPACE=cm_Reverse
@@ -288,6 +286,8 @@ AS+P=cm_CopyNamesToClip
 A+K=cm_FocusTrg
 A+X=cm_UnpackFiles
 A+Z=cm_PackFiles
+CS+A=cm_SrcViewModeList
+A+SPACE=cm_SrcQuickview
 [Associations]
 [Confirmation]
 deleteDirs=1
