Vim, Tmux: Update config

--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -11,7 +11,7 @@ bind-key -r - resize-pane -L
 bind-key -r = resize-pane -R
 bind-key -r _ resize-pane -D
 bind-key -r + resize-pane -U
-bind-key -r w resize-pane -Z
+bind-key -r p resize-pane -Z
 bind-key -r { swap-pane -U
 bind-key -r } swap-pane -D
 bind-key \ split-window -h -c "#{pane_current_path}"
@@ -22,8 +22,8 @@ bind-key m command-prompt -I "#W" "rename-window '%%'"
 bind-key t new-window
 bind-key T break-pane
 bind-key b choose-tree
-bind-key -r Left select-window -p
-bind-key -r Right select-window -n
+bind-key -r , select-window -p
+bind-key -r . select-window -n
 bind-key Q kill-window
 # Sessions
 bind-key M command-prompt -I "#S" "rename-session '%%'"
@@ -64,3 +64,4 @@ set-option -g window-status-current-style fg=white,bg=black
 # Debug
 bind F5 source ~/.tmux.conf\; display "tmux config sourced"
 bind F6 neww -n "tmux-config" "\${EDITOR:-vim} ~/.tmux.conf"
+
