Vim: Update configs

--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -11,7 +11,7 @@ bind-key -r - resize-pane -L
 bind-key -r = resize-pane -R
 bind-key -r _ resize-pane -D
 bind-key -r + resize-pane -U
-bind-key -r p resize-pane -Z
+bind-key -r w resize-pane -Z
 bind-key -r { swap-pane -U
 bind-key -r } swap-pane -D
 bind-key \ split-window -h -c "#{pane_current_path}"
@@ -24,7 +24,7 @@ bind-key T break-pane
 bind-key b choose-tree
 bind-key -r , select-window -p
 bind-key -r . select-window -n
-bind-key Q kill-window
+bind-key x kill-window
 # Sessions
 bind-key M command-prompt -I "#S" "rename-session '%%'"
 bind-key X kill-session -a
