--- a/.config/winterm/settings.json
+++ b/.config/winterm/settings.json
@@ -15,7 +15,7 @@
   "alwaysShowTabs": false,
   "showTabsInTitlebar": true,
   "showTerminalTitleInTitlebar": true,
-  "tabWidthMode": "titleLength",
+  "tabWidthMode": "equal",
   "snapToGridOnResize": true,
   "wordDelimiters": " /\\()\"'-.,:;<>~!@#$%^&*|+=[]{}~?\u2502",
   "confirmCloseAllTabs": true,
@@ -64,6 +64,12 @@
         "hidden": true,
         "name": "Azure Cloud Shell",
         "source": "Windows.Terminal.Azure"
+      },
+      {
+          "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+          "hidden": false,
+          "name": "PowerShell",
+          "source": "Windows.Terminal.PowershellCore"
       }
     ]
   },
@@ -133,8 +139,8 @@
     { "command": "scrollDownPage", "keys": "alt+f" },
     { "command": "scrollUp", "keys": "alt+y" },
     { "command": "scrollUpPage", "keys": "alt+b" },
-    { "command": { "action": "splitPane", "split": "horizontal"}, "keys": "alt+shift+\\" },
-    { "command": { "action": "splitPane", "split": "vertical"}, "keys": "alt+\\" },
+    { "command": { "action": "splitPane", "split": "horizontal" }, "keys": "alt+shift+\\" },
+    { "command": { "action": "splitPane", "split": "vertical" }, "keys": "alt+\\" },
     { "command": { "action": "switchToTab", "index": 0 }, "keys": "ctrl+alt+1" },
     { "command": { "action": "switchToTab", "index": 1 }, "keys": "ctrl+alt+2" },
     { "command": { "action": "switchToTab", "index": 2 }, "keys": "ctrl+alt+3" },
