Totalcmd: Update config

--- a/.config/totalcmd/WINCMD.INI
+++ b/.config/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=440
+firstmnu=2553
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=100
+test=43
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -66,8 +66,8 @@ Editor=notepad.exe
 Viewertype=1
 SyncFlags=0
 SyncButtons=63
-DirTabOptions=1019
-DirTabLimit=32
+DirTabOptions=1017
+DirTabLimit=16
 ShowCentury=1
 SizeStyle=9
 SizeFooter=9
@@ -92,28 +92,32 @@ DarkMode=0
 [Buttonbar]
 Buttonbar=%APPDATA%\GHISLER\toolbars\default.bar
 DefaultLib=wcmicon2
-Buttonheight=29
+Buttonheight=36
 Buttonheight96=29
 FlatIcons=1
 SmallIcons=1
-SmallIconSize=16
+SmallIconSize=20
 SmallIconSize96=16
-DefaultDpi=96
+DefaultDpi=120
 XPstyle=0
 Buttonheight168=51
 SmallIconSize168=28
+Buttonheight120=36
+SmallIconSize120=20
 [ButtonbarVertical]
 Buttonbar=%APPDATA%\GHISLER\toolbars\vertical.bar
-Buttonheight=29
+Buttonheight=37
 Buttonheight168=53
 FlatIcons=1
 SmallIcons=1
-SmallIconSize=16
+SmallIconSize=20
 SmallIconSize168=32
-DefaultDpi=96
-XPstyle=1
+DefaultDpi=120
+XPstyle=0
 Buttonheight96=29
 SmallIconSize96=16
+Buttonheight120=37
+SmallIconSize120=20
 [ButtonbarCache]
 IconDll_default.bar=TCNewLib1
 IconDll_vertical.bar=TCNewLib1
@@ -141,13 +145,15 @@ CmdLine=0
 KeyButtons=0
 HistoryHotlistButtons=1
 BreadCrumbBar=1
+ButtonBar=0
 ButtonBarVertical=1
 [ViewModeSwitch]
 [SearchText]
-0=FUCK
-1=logwn
-2=screen
-3=visibility
+0=716
+1=FUCK
+2=logwn
+3=screen
+4=visibility
 [AllResolutions]
 FontSize=9
 FontName=Consolas
@@ -158,8 +164,8 @@ FontWeightWindow=700
 FontNameDialog=Microsoft Sans Serif
 CmdSelX=719
 CmdSelY=298
-CmdSelDX=756
-CmdSelDY=395
+CmdSelDX=919
+CmdSelDY=588
 CmdSelMax=0
 Iconsize32=24
 IconsInMenus_96=0
@@ -190,6 +196,11 @@ RenameDX=720
 RenameDY=480
 RenameMax=0
 RenameTabs=169,276,476,536,656
+MenuChangeX=507
+MenuChangeY=256
+MenuChangeDX=800
+MenuChangeDY=500
+MenuChangeMax=0
 [Lister]
 textwidth=81
 binwidth=75
@@ -287,7 +298,11 @@ A+K=cm_FocusTrg
 A+X=cm_UnpackFiles
 A+Z=cm_PackFiles
 CS+A=cm_SrcViewModeList
-A+SPACE=cm_SrcQuickview
+A+F=cm_SrcQuickview
+A+A=cm_SwitchToPreviousTab
+A+D=cm_SwitchToNextTab
+A+S=cm_FocusTrg
+A+W=cm_MatchSrc
 [Associations]
 [Confirmation]
 deleteDirs=1
